--- a/src/app/components/tasks/tasks.component.html
+++ b/src/app/components/tasks/tasks.component.html
@@ -1,3 +1,7 @@
 @for (task of tasks; track task.id) {
-<app-task-item [task]="task" (onDeleteTask)="deleteTask(task)"></app-task-item>
+<app-task-item
+  [task]="task"
+  (onDeleteTask)="deleteTask(task)"
+  (onToggleReminder)="toggleReminder(task)"
+></app-task-item>
 }
